feat: 백준_14889_스타트와링크_실버1_한재경 최적화